--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/assets/images/mobile-footer-logo.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Share faith-based content for all to read" />
-		<link rel="apple-touch-icon" href="/assets/images/mobile-footer-logo.png" />
-    <meta property="og:image" content="/assets/images/mobile-footer-logo.png" />
-		<!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/assets/images/mobile-footer-logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Share beautiful experience for all to read" />
+  <link rel="apple-touch-icon" href="/assets/images/mobile-footer-logo.png" />
+  <meta property="og:image" content="/assets/images/mobile-footer-logo.png" />
+  <meta property="og:image" content="https://www.gratico.xyz/assets/images/mobile-footer-logo.png" />
+
+  <meta property="og:description" content="Share beautiful experience for all to read" />
+
+  <meta property="og:url" content="https://www.gratico.xyz" />
+
+  <meta property="og:title" content="" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,13 +30,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Gratico - Share beautiful experiences.</title>
-	</head>
+  <title>Gratico - Share beautiful experiences for all to read.</title>
+</head>
 
-	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-		<!--
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -37,5 +45,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+</body>
+
 </html>
