--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Share beautiful experience for all to read" />
   <link rel="apple-touch-icon" href="/assets/images/mobile-footer-logo.png" />
-  <meta property="og:image" content="/assets/images/mobile-footer-logo.png" />
+  <!-- <meta property="og:image" content="/assets/images/mobile-footer-logo.png" /> -->
   <meta property="og:image" content="https://www.gratico.xyz/assets/images/mobile-footer-logo.png" />
 
   <meta property="og:description" content="Share beautiful experience for all to read" />
 
   <meta property="og:url" content="https://www.gratico.xyz" />
 
-  <meta property="og:title" content="" />
+  <meta property="og:title" content="Gratico - Share beautiful experiences for all to read" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
