--- a/public/edit.html
+++ b/public/edit.html
@@ -109,7 +109,12 @@
 	</head>
 
 	<body>
-		<header><img src="./assets/images/logo-monochrome.png" alt="" /></header>
+		<header>
+			<img
+				src="https://res.cloudinary.com/dj5ud4y41/image/upload/v1641584418/logo-monochrome_mpoa6z.png"
+				alt=""
+			/>
+		</header>
 		<main>
 			<h1 class="email-heading">Subject: Edit my story</h1>
 
@@ -146,7 +151,10 @@
 		</main>
 		<footer>
 			<p>Share beautiful experiences for all to read</p>
-			<img src="./assets/images/logo-email-footer.png" alt="" />
+			<img
+				src="https://res.cloudinary.com/dj5ud4y41/image/upload/v1641584418/logo-email-footer_wgb682.png"
+				alt=""
+			/>
 		</footer>
 	</body>
 </html>
