--- a/public/update.html
+++ b/public/update.html
@@ -162,11 +162,19 @@
 	</head>
 
 	<body>
-		<header><img src="./assets/images/logo-monochrome.png" alt="" /></header>
+		<header>
+			<img
+				src="https://res.cloudinary.com/dj5ud4y41/image/upload/v1641584418/logo-monochrome_mpoa6z.png"
+				alt=""
+			/>
+		</header>
 		<main>
 			<div class="email-title">
 				<h1 class="email-heading">Subject: Your story has been updated!</h1>
-				<img src="./assets/images/party-popper.png" alt="" />
+				<img
+					src="https://res.cloudinary.com/dj5ud4y41/image/upload/v1641584418/party-popper_ldoerq.png"
+					alt=""
+				/>
 			</div>
 
 			<div class="email-body">
@@ -193,7 +201,10 @@
 		</main>
 		<footer>
 			<p>Share beautiful experiences for all to read</p>
-			<img src="./assets/images/logo-email-footer.png" alt="" />
+			<img
+				src="https://res.cloudinary.com/dj5ud4y41/image/upload/v1641584418/logo-email-footer_wgb682.png"
+				alt=""
+			/>
 		</footer>
 	</body>
 </html>
